[FIX JENKINS-42598] - spacing issue with numeric inputs (#34)
* JENKINS-42598 - spacing issue with numeric inputs
* JENKINS-43009 - Fix styling issue with hack for table action buttons affecting input

--- a/src/main/less/header-buttons.less
+++ b/src/main/less/header-buttons.less
@@ -58,7 +58,7 @@
 
 .actions { // for table actions
     overflow: visible !important;
-    div {
+    > div > div {
         display: inline-block;
     }
 }
